--- a/README
+++ b/README
@@ -87,5 +87,6 @@ Other issues should be reported to upstream.
 Legal Information and Credits
 =============================
 
-The Librepup logo by Koz Ross is provided under the terms of the CC-BY-SA-4.0
-license (https://creativecommons.org/licenses/by-sa/4.0/).
+The Librepup logo by Koz Ross (http://retro-freedom.nz/contact/) is provided
+under the terms of the CC-BY-SA-4.0 license
+(https://creativecommons.org/licenses/by-sa/4.0/).
